# AI3603-Billiards

./: .gitignore  GAME_RULES.md  PROJECT_GUIDE.md  README.md  TODO.md  agent.py  compare.py  demo.py  evaluate.py  poolenv.py  pyproject.toml  replay_viewer.py  utils.py
agents/: __init__.py  basic_agent_pro.py  new_agent.py
configs/: basic_vs_geometry.yaml  default.yaml  demo.yaml  geometry_adaptive.yaml  geometry_adaptive_plus.yaml  geometry_adaptive_tuned.yaml  geometry_v1.yaml  geometry_v2_defense.yaml  geometry_v2_defense_slim.yaml  geometry_v2_defense_tuned.yaml  geometry_v3_position.yaml  geometry_v3_position_plus.yaml  geometry_v3_position_tuned.yaml  ppo_training.yaml  ppo_training_optimized.yaml  ppo_vs_geometry.yaml
docs/: GAME_RULES.md  PPO_AGENT_GUIDE.md
reports/: main.tex
scripts/: plot_results.py
src/eval/: README.md  evaluate.py  poolenv.py  utils.py
src/eval/agents/: __init__.py  agent.py  basic_agent.py  geometry_agent.py  new_agent.py
src/train/: README.md  evaluate.py  poolenv.py
src/train/agents/: __init__.py  base.py  basic.py  geometry.py  pro.py  random.py
src/train/agents/ppo/: __init__.py  ppo.py  ppo_networks.py  ppo_trainer.py
src/train/scripts/: train_ppo.py
src/utils/: logger.py  seed.py
train/: agent.py  config.py  evaluate.py  gym_wrapper.py  logger.py  poolenv.py  ppo_agent.py  train_ppo.py
train/agents/: __init__.py  base.py  basic.py  geometry.py  new.py  ppo.py  pro.py  random.py
train/configs/: basic_agent.yaml  geometry_agent.yaml  new_agent.yaml  ppo_agent.yaml  pro_agent.yaml  random_agent.yaml
