[project]
name = "ai3603-billiards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bayesian-optimization>=3.1.0",
    "gymnasium>=1.2.2",
    "loguru>=0.7.3",
    "packaging>=25.0",
    "pooltool-billiards==0.5.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.uv]
override-dependencies = [
    "panda3d>=1.10.13,<1.11",
] # Force to use stable version of panda3d
